# speect

engine/tests/: speect_test.c
plugins/processors/utterances/nlp/: CMakeLists.txt
plugins/processors/utterances/nlp/cfstlookup/: AUTHORS  CMakeLists.txt
plugins/processors/utterances/nlp/cfstlookup/cfstlookup/: CMakeLists.txt  cfstlookupConfig.cmake.in  cfstlookupConfigVersion.cmake.in
plugins/processors/utterances/nlp/cfstlookup/cfstlookup/src/: fstlib.c  ieee754.h  read.c  template-private.h
plugins/processors/utterances/nlp/cfstlookup/cfstlookup/src/cfstlookup/: cfstlookup.h
plugins/processors/utterances/nlp/cfstlookup/cfstlookup/src/stuffd/: common.h  read.h
plugins/processors/utterances/nlp/cfstlookup/cfstlookup/tests/: cfstlookup_dictionary_lookup_test.c
plugins/processors/utterances/nlp/cfstlookup/cfstlookup/tests/data/: old.fst
plugins/processors/utterances/nlp/cfstlookup/cmake/: sources.cmake
plugins/processors/utterances/nlp/cfstlookup/src/: lexlookup_proc.c  lexlookup_proc.h  plugin.c
plugins/serialization/files/lexicon/: CMakeLists.txt
plugins/serialization/files/lexicon/cfstlookup/: CMakeLists.txt
plugins/serialization/files/lexicon/cfstlookup/src/: lexicon_cfstlookup.c  lexicon_cfstlookup.h  plugin.c  read.c  serialized_lex.c  serialized_lex.h
plugins/serialization/files/lexicon/cfstlookup/swig/common/: lexicon_cfstlookup_common.c
plugins/serialization/files/lexicon/cfstlookup/swig/python/: CMakeLists.txt  lexicon_cfstlookup_python.c
plugins/serialization/files/lexicon/json/src/: lexicon_json.c  read.c
plugins/serialization/files/lexicon/maryttsfst/: AUTHORS  CMakeLists.txt
plugins/serialization/files/lexicon/maryttsfst/cfstlookup/: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  COPYING  README.md
plugins/serialization/files/lexicon/maryttsfst/cfstlookup/src/: fstlib.c  ieee754.c  read.c  template-private.h
plugins/serialization/files/lexicon/maryttsfst/cfstlookup/src/cfstlookup/: defines.h
plugins/serialization/files/lexicon/maryttsfst/cfstlookup/src/stuffd/: common.h  read.h
plugins/serialization/files/lexicon/maryttsfst/cfstlookup/tests/: cfstlookup_dictionary_lookup_test.c
plugins/serialization/files/lexicon/maryttsfst/cfstlookup/tests/data/: new.fst  old.fst
plugins/serialization/files/lexicon/maryttsfst/cmake/: sources.cmake
plugins/serialization/files/lexicon/maryttsfst/examples/: CMakeLists.txt  load_lexicon_maryttsfst.c
plugins/serialization/files/lexicon/maryttsfst/src/: lexicon_maryttsfst.c  lexicon_maryttsfst.h  plugin.c  read.c  serialized_lex.c  serialized_lex.h
plugins/serialization/files/lexicon/maryttsfst/swig/common/: lexicon_maryttsfst_common.c
plugins/serialization/files/lexicon/maryttsfst/swig/python/: CMakeLists.txt  lexicon_maryttsfst_python.c
