######################################################################################
##                                                                                  ##
## AUTHOR  : Aby Louw                                                               ##
## DATE    : December 2009                                                          ##
##                                                                                  ##
######################################################################################
##                                                                                  ##
## CMakeList for SLexicon MaryTTS FST Plug-in                                       ##
##                                                                                  ##
##                                                                                  ##
######################################################################################

find_package(cfstlookup REQUIRED)

#------------------------------------------------------------------------------------#
#                             Define plug-in                                         #
#------------------------------------------------------------------------------------#

speect_plugin_definition(Lexicon_MaryttsFST "SLexiconMaryttsFST" 1 0 0)


#------------------------------------------------------------------------------------#
#                        Configure plugin_info.h.in                                  #
#------------------------------------------------------------------------------------#

set(description "Load SLexicon type data in MaryTTS FST format from files")

# Minimum required Speect Engine version
set(major_min 1)
set(minor_min 0)

speect_plugin_configure_info(${description} ${major_min} ${minor_min})

speect_plugin_include_dirs(${CFSTLOOKUP_INCLUDE_DIRS})


#------------------------------------------------------------------------------------#
#                               Source files                                         #
#------------------------------------------------------------------------------------#

# Lists of all the source files
include(sources)


#------------------------------------------------------------------------------------#
#                               Include addendum                                     #
#------------------------------------------------------------------------------------#

include(lexicon)


#------------------------------------------------------------------------------------#
#                            Plug-in shared object                                   #
#------------------------------------------------------------------------------------#

speect_plugin_create(${CFSTLOOKUP_LIBRARIES})



#------------------------------------------------------------------------------------#
#                                 examples/tests                                     #
#------------------------------------------------------------------------------------#

if(WANT_EXAMPLES)
#  add_subdirectory(examples)
endif(WANT_EXAMPLES)


#------------------------------------------------------------------------------------#
#                              SWIG wrappers                                         #
#------------------------------------------------------------------------------------#

# Speect SWIG interface
if(NOT NO_SWIG)
#  add_subdirectory(swig)
endif(NOT NO_SWIG)

